--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
