--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <param-name>logbackConfigLocation</param-name>
         <param-value>WEB-INF/logback.xml</param-value>
     </context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:config/applicationContext.xml</param-value>
+    </context-param>
 
     <!-- 加载logBack日志系统 -->
     <listener>
