--- a/src/main/resources/props/dev.properties
+++ b/src/main/resources/props/dev.properties
@@ -3,4 +3,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/infomanager
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
